@@ -29,6 +29,21 @@ public class ZosmfJwtCheck {
     static final String VERIFY_DISABLED = "DISABLED";
 
     public static int mainWithExitCode(String[] args) {
+        System.out.println("DIAG: Java=" + System.getProperty("java.version") + " Vendor=" + System.getProperty("java.vendor"));
+        System.out.println("DIAG: java.protocol.handler.pkgs (before)=" + System.getProperty("java.protocol.handler.pkgs", "<not set>"));
+
+        ensureSafkeyringHandler();
+
+        System.out.println("DIAG: java.protocol.handler.pkgs (after)=" + System.getProperty("java.protocol.handler.pkgs", "<not set>"));
+
+        // Check if ibm.crypto.zsecurity module is resolved (confirms --add-modules worked)
+        try {
+            Class<?> testClass = Class.forName("com.ibm.crypto.zsecurity.provider.safkeyring.Provider");
+            System.out.println("DIAG: Module ibm.crypto.zsecurity IS resolved (class found: " + testClass.getName() + ")");
+        } catch (ClassNotFoundException e) {
+            System.out.println("DIAG: Module ibm.crypto.zsecurity NOT resolved (ClassNotFoundException). --add-modules may be missing.");
+        }
+
         try {
             ZosmfJwtCheckConf conf = new ZosmfJwtCheckConf();
             CommandLine cmd = new CommandLine(conf);
@@ -96,6 +111,34 @@ public class ZosmfJwtCheck {
                 throw new IllegalArgumentException("--truststore-password is required when --scheme=https and verification is not DISABLED.");
             }
         }
+    }
+
+    /**
+     * Registers IBM SAF keyring URL protocol handler packages via the
+     * {@code java.protocol.handler.pkgs} system property.
+     *
+     * <p>On IBM Java 17/21 (z/OS), this property works in conjunction with
+     * {@code --add-modules ibm.crypto.zsecurity,ibm.crypto.hdwrcca} to enable
+     * the {@code safkeyring://} URL protocol. The {@code --add-modules} flag
+     * resolves the module (making classes accessible), while this property tells
+     * the {@link java.net.URL} class which packages to search for the handler.</p>
+     */
+    static void ensureSafkeyringHandler() {
+        String[] packagePrefixes = {
+            "com.ibm.crypto.zsecurity.provider",
+            "com.ibm.crypto.hdwrCCA.provider"
+        };
+        String existing = System.getProperty("java.protocol.handler.pkgs", "");
+        StringBuilder sb = new StringBuilder(existing);
+        for (String prefix : packagePrefixes) {
+            if (!existing.contains(prefix)) {
+                if (sb.length() > 0) {
+                    sb.append('|');
+                }
+                sb.append(prefix);
+            }
+        }
+        System.setProperty("java.protocol.handler.pkgs", sb.toString());
     }
 
     public static void main(String[] args) {
